# liblogicalaccess-swig

./: .gitignore  Dockerfile  GitVersion.yml  Jenkinsfile  LICENSE.LibLogicalAccess-SWIG.txt  LibLogicalAccessNet.sln  README.md  README.txt  assembly.xml  build-linux.sh  build-linux_native.sh  build-windows.bat  build-windows.ps1  liblogicalaccess-swig.sln  liblogicalaccess-swig2.0.sln  linux.sh  linux_native.sh  pom.xml  std_list.i
.github/workflows/: build-linux.yml  build-windows.yml  build.yml
DESFireEV1Tests/: TestChangekeyIks.cs
DESFireEV1Tests/Properties/: AssemblyInfo.cs
EPassTests/: Dump.cs
LibLogicalAccessNet/: LibLogicalAccessNet.csproj  Program.cs
LibLogicalAccessNet.win32/: LibLogicalAccessNet.win32.vcxproj  liblogicalaccess.i  liblogicalaccess_card.i  liblogicalaccess_cardservice.i  liblogicalaccess_core.i  liblogicalaccess_crypto.i  liblogicalaccess_data.i  liblogicalaccess_exception.i  liblogicalaccess_iks.i  liblogicalaccess_library.i  liblogicalaccess_reader.i  liblogicalaccess_readerservice.i
LibLogicalAccessNet/Exception/: CustomException.cs
LibLogicalAccessNetTest/: LibLogicalAccessNetTest.csproj  Program.cs
LibLogicalAccessTest/: LibLogicalAccessTest.csproj  Program.cs
LibLogicalAccessTest/Properties/: AssemblyInfo.cs
Mifare1K/: Mifare1KTests.csproj  TestGeneral.cs  TestIterateMemory.cs  TestStorageService.cs
Mifare1K/Properties/: AssemblyInfo.cs
MifarePlusTests/: MifarePlusTests.csproj  TestDetection.cs
MifarePlusTests/Properties/: AssemblyInfo.cs
TestCore/: Core.cs  TestCore.csproj
installer/: LibLogicalAccess.Install.sln  LibLogicalAccessNet.aip  LibLogicalAccessNetCEMergex64.aip  LibLogicalAccessNetCEMergex86.aip  LibLogicalAccessNetMergex64.aip  LibLogicalAccessNetMergex86.aip  assembly.xml  conan-imports.bat  conan-imports.ps1  conanfile.py  graph_info.json  pom.xml
installer/LibLogicalAccess.Msm/: LibLogicalAccess.Msm.wixproj  MergeModule.wxs  config.wxi
installer/LibLogicalAccess.Setup/: LibLogicalAccess.Setup.wixproj  Product.wxs  config.wxi
installer/LibLogicalAccessNet-SetupFiles/: LibLogicalAccessNet.msi.REMOVED.git-id
installer/ce/: LibLogicalAccessNetMergex64.aip  LibLogicalAccessNetMergex86.aip  pom.xml
installer/full/: LibLogicalAccessNetMergex64.aip  LibLogicalAccessNetMergex86.aip  assembly.xml
installer/scripts/: SCardSvr.vbs  SCardSvr_Win7.reg  SCardSvr_Win8.1.reg  SCardSvr_Win8.reg  disable_driver_rfid.reg  reg2vbs.vbs
installer/wix/: LibLogicalAccess.Setup.sln  LibLogicalAccess.Setup.wixproj  Product.wxs  config.wxi
liblogicalaccess-swig.win32/: liblogicalaccess-swig.win32.vcxproj  liblogicalaccess-swig.win32.vcxproj.filters  liblogicalaccess.i  liblogicalaccess_card.i  liblogicalaccess_cardservice.i  liblogicalaccess_core.i  liblogicalaccess_data.i  liblogicalaccess_iks.i  liblogicalaccess_library.i  liblogicalaccess_reader.i  liblogicalaccess_readerservice.i  msliblogicalaccessswigwin32.h
liblogicalaccess-swig2.0/: liblogicalaccess-swig2.0.csproj
liblogicalaccess-swig2.0/Exception/: CustomException.cs
liblogicalaccess-swig2.0/Properties/: AssemblyInfo.cs
samples/basic-csharp/: Program.cs  basic.csproj  basic.sln
scripts/: adaptExceptionClass.py  autoComplete.py  callScriptPython.bat  createExClass.ps1  createExceptionClass.py  swig-build.bat  swig-build.ps1
sources/: LibLogicalAccessNet.sln
sources/DESFireEV1Tests/: DESFireEV1Tests.csproj  TestAllDESFire.cs  TestChangekeyIks.cs  TestFormat.cs  TestGeneral.cs
sources/EPassTests/: EPassTests.csproj
sources/ISO15693Tests/: ISO15693Tests.csproj  TestGeneral.cs
sources/LibLogicalAccessNet/: LibLogicalAccessNet.csproj  default-sign.snk
sources/LibLogicalAccessNet.native/: CMakeLists.txt  conan-build.ps1  conanfile.py  custom_exception.i  liblogicalaccess.i  liblogicalaccess_card.i  liblogicalaccess_card_sam.i  liblogicalaccess_cardservice.i  liblogicalaccess_core.i  liblogicalaccess_crypto.i  liblogicalaccess_data.i  liblogicalaccess_exception.i  liblogicalaccess_library.i  liblogicalaccess_reader.i  liblogicalaccess_reader_sam.i
sources/LibLogicalAccessNet.win32/: CMakeLists.txt  LibLogicalAccessNet.win32.vcxproj  conan-build.ps1  conanfile.py  custom_exception.i  liblogicalaccess.i  liblogicalaccess_card.i  liblogicalaccess_card_sam.i  liblogicalaccess_cardservice.i  liblogicalaccess_core.i  liblogicalaccess_crypto.i  liblogicalaccess_data.i  liblogicalaccess_exception.i  liblogicalaccess_iks.i  liblogicalaccess_reader.i  liblogicalaccess_reader_sam.i  lla_std_types.i
sources/LibLogicalAccessNetTest/: LibLogicalAccessNetTest.csproj  Program.cs
sources/Mifare1K/: Mifare1KTests.csproj  TestGeneral.cs  TestIncrement.cs  TestIterateMemory.cs  TestStorageService.cs  TestUtils.cs
sources/SEOSTests/: SEOSTests.csproj  TestSEOS.cs
sources/TestCore/: CallBackReaderUnit.cs  Core.cs  IKS.cs  ReaderProvider.cs  TestCore.csproj  TestFormat.cs  TestGetType.cs  TestUnserialize.cs
sources/scripts/: adaptExceptionClass.py  adaptExceptionScript.bat  autoComplete.py  autoCompleteScript.bat  generate-swig.bat  lla.py  (+5 more)
wrapper/: liblogicalaccess-swig.win32.vcxproj  liblogicalaccess.i  liblogicalaccess_card.i  liblogicalaccess_data.i  liblogicalaccess_library.i  liblogicalaccess_reader.i  liblogicalaccess_readerservice.i  linux_gen.sh
(+29 files in other folders)
